---
title: "Application Managers — Class Diagram"
---
%% File: src/bioetl/application/core/checkpoint_manager.py, quarantine_manager.py
%% Updated: 2025-12-17
%% Author: Claude

classDiagram
    direction TB

    class CheckpointManager {
        -checkpoint_port: CheckpointPort
        -logger: BoundLogger
        -pipeline_name: str
        -run_id: RunID
        -resume: bool
        -watermark_extractor: Callable
        -_current_watermark: Watermark | None
        +load_checkpoint() Watermark | None
        +save_checkpoint(watermark, metadata) None
        +update_watermark(record) None
        +current_watermark: Watermark | None
    }

    class QuarantineManager {
        -quarantine_port: QuarantinePort
        -pipeline_name: str
        -_stats: dict
        +write(error_code, payload, batch_id) None
        +get_stats() dict
        +inspect(limit, error_code) list
    }

    class CheckpointPort {
        <<Protocol>>
        +save()
        +load()
        +delete()
    }

    class QuarantinePort {
        <<Protocol>>
        +write()
        +inspect()
        +get_stats()
    }

    CheckpointManager --> CheckpointPort : uses
    QuarantineManager --> QuarantinePort : uses

    note for CheckpointManager "Manages pipeline state persistence"
    note for QuarantineManager "Manages failed records isolation"
